# Progressive_Overload_Tracker

./: .cursorignore  .cursorrules  .env.example  .gitignore  AI_USAGE.md  API_CONTRACT.md  ARCHITECTURE.md  CODING_STANDARDS.md  DATA_MODEL.md  PRD.md  PROJECT_GUIDE.md  PUSH_TO_GITHUB.md  README.md  redundant_mistakes.md
backend/: .env.example  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  0483435f322d_add_exercises_table.py  0c542f366960_add_workout_templates_tables.py  a68315694ffd_add_users_table.py  b7e8c4a1f3d2_add_workout_sessions_tables.py
backend/app/: main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: __init__.py  analytics.py  auth.py  exercises.py  export.py  sessions.py  templates.py
backend/app/core/: config.py  logging.py  security.py  time.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  exercise.py  set.py  template_exercise.py  user.py  workout_exercise.py  workout_session.py  workout_template.py
backend/app/schemas/: __init__.py  analytics.py  auth.py  exercises.py  export.py  sessions.py  templates.py
backend/app/services/: __init__.py  analytics.py  auth.py  exercises.py  export.py  sessions.py  templates.py
backend/app/tests/: __init__.py  conftest.py  test_analytics.py  test_auth.py  test_exercises.py  test_export.py  test_sessions.py  test_templates.py
backend/docs/: log.md
backend/scripts/: cleanup_orphan_workout_data.py
docs/: README.md  libraries-and-tools.md  project-log.md  research-notes.md  (+1 more)
(+69 files in other folders)
